<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="name"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_2"
            android:layout_weight="4"
            android:background="@drawable/round_rect_bg"
            android:padding="@dimen/padding_5">

            <TextView
                android:id="@+id/txt_name"
                style="@style/TextMediumPlain"
                android:text="@{name}"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_2"
            android:layout_weight="2"
            android:background="@drawable/round_rect_bg"
            android:padding="@dimen/padding_5">

            <TextView
                style="@style/TextSmallPlain"
                android:text="@string/label_cnfrmed"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_2"
            android:layout_weight="2"
            android:background="@drawable/round_rect_bg"
            android:padding="@dimen/padding_5">

            <TextView
                style="@style/TextSmallPlain"
                android:text="@string/label_actv"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_2"
            android:layout_weight="2"
            android:background="@drawable/round_rect_bg"
            android:padding="@dimen/padding_5">

            <TextView
                style="@style/TextSmallPlain"
                android:text="@string/label_rcvrd"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_2"
            android:layout_weight="2"
            android:background="@drawable/round_rect_bg"
            android:padding="@dimen/padding_5">

            <TextView
                style="@style/TextSmallPlain"
                android:text="@string/label_dcscd"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>